@@ -1,3 +1,8 @@
+2004-03-01  Saito <saito@intaa.net>
+
+	* timidity/timidity.c:
+	  Change some strcat() to strncat().
+
 2004-02-29  mput <root@mput.dip.jp>
 
 	* configure.in: version to 2.13.0-rc2
